# cli-chess

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  chess.c  chess.h  piece.c  piece.h
tests/: CMakeLists.txt  chessTest.c  pieceTest.c
